@@ -5,6 +5,9 @@ zope.testing Changelog
 ==================
 
 - Fix bug when running subprocesses on Windows
+- The option REPORT_ONLY_FIRST_FAILURE (command line option "-1") is now
+  respected even when a doctest declares its own REPORTING_FLAGS, such as
+  REPORT_NDIFF.
 
 
 3.7.4 (2009-05-01)
